# nasa_desktop_image

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  package-lock.json  pyproject.toml
astrodesktop/: db.sqlite3  manage.py  package-lock.json  package.json
astrodesktop/astrodesktop/: asgi.py  models.py  settings.py  urls.py  wsgi.py
astrodesktop/pics/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
astrodesktop/pics/migrations/: 0001_initial.py  0002_picture_thumb.py  0003_picture_height_picture_width_alter_picture_thumb.py  0004_rename_height_picture_thumb_height_and_more.py
astrodesktop/pics/static/css/: pics.css
astrodesktop/pics/static/js/htmx/: modal.js
astrodesktop/templates/: base.html  index.html
astrodesktop/templates/pics/: picture_detail.html  picture_list.html  pictureoftheday.html
astrodesktop/theme/static_src/: tailwind.config.js
cli/: app.py
