[tool.poetry]
name = "nasa-desktop-image"
version = "0.1.0"
description = "get images from nasa and set them as your desktop"
authors = ["Raymond Gasper <14928724+rgasper@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
# packages = [{include = "nasa_desktop_image"}]

[tool.poetry.dependencies]
python = "3.10"
typer = "^0.7.0"
pylsp-mypy = "^0.6.3"
pyls-isort = "^0.2.2"
python-lsp-black = "^1.2.1"
pyls-flake8 = "^0.4.0"
python-lsp-server = "^1.6.0"
sh = "^1.14.3"
requests = "^2.28.1"
Django = "^4.1.4"
Pillow = "^9.3.0"
django-cache-memoize = "^0.1.10"
loguru = "^0.6.0"
django-browser-reload = "^1.6.0"
django-bootstrap4 = "^22.3"
django-htmx = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Formatting & Static Analysis Tools
[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true

[tool.black]
line-length = 120

[tool.pylama.linter.pycodestyle]
max_line_length = 120

[tool.pylama.linter.pylint]
max_line_length = 120
disable = "R"
